2008-06-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/Parser.cs,
	  MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs,
	  MonoDevelop.Xml.StateEngine/CDataState.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlSpecialTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagNameState.cs,
	  MonoDevelop.Xml.StateEngine/State.cs,
	  MonoDevelop.Xml.StateEngine/XmlProcessingInstructionState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlFreeState.cs,
	  MonoDevelop.Xml.StateEngine/XmlCommentState.cs,
	  MonoDevelop.Xml.StateEngine/XmlMalformedTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeState.cs: Rework stack
	  cloning and character rejection mechanisms in XML/ASP state engine.

2008-06-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor.mds: Don't build editor tests by default.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor.addin.xml, MonoDevelop.XmlEditor.mds: Bump MD
	  version.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor/XmlEditorService.cs: Use the OnDestroyed event
	  instead of Dispose, since with the latest changes in gtk#, Dispose
	  is not called anymore when a widget is destroyed.

2008-06-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor.mds: Some fixes in project files.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor/XmlEditorService.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor.mdp: New project model changes.

2008-05-07  Michael Hutchinson <mhutchinson@novell.com> 
