@@ -1,3 +1,8 @@
+2008-06-26  Michael Hutchinson  <mhutchinson@novell.com> 
+
+	* MonoDevelop.Xml.StateEngine/Parser.cs: Remove reference to work-in-
+	  progress code.
+
 2008-06-25  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Xml.StateEngine/Parser.cs,
